--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div style="width: 70vw;margin: auto;">
+    <div class="base__container">
         <div id="presenting_video_container" data-videos='[{
                 "id": "1",
                 "video_url": "./video.mp4",
