change page title

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/4.4.168/pdf_viewer.min.css" integrity="sha512-x8buBaDKkgii2qE6jCxilM3dSVZtKHI+axn8gaWb3xDfE/Klk/zgy7+NhuQY7X09Np5aeoPuh3cRqlfRG+98Vw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Video and Presentation Slide App</title>
 </head>
 
 <body>
