add test resources from project owners

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             tracker: 'txt',
             data: {
                 "id": "1",
-                "video_url": "https://terrahq.nyc3.cdn.digitaloceanspaces.com/public/side_hustle_testimonials%20%281080p%29.mp4",
-                "presentation_url": "https://terrahq.nyc3.cdn.digitaloceanspaces.com/lessons/crm/week-1/How%20to%20Attend%20to%20Irate%20Customer%20PPTx.pdf",
-                "tracking_url": "text.txt",
+                "video_url": "https://terrahq.nyc3.cdn.digitaloceanspaces.com/dev/Pete.mov",
+                "presentation_url": "https://terrahq.nyc3.cdn.digitaloceanspaces.com/dev/SLIDES-%20Curi%20Organization%20Overview.pdf",
+                "tracking_url": "https://terrahq.nyc3.cdn.digitaloceanspaces.com/dev/transcript.txt",
                 "tracker_json": null
             }
         }
